# Repo-Challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: cheap.yaml  default.yaml  serial.yaml  strong.yaml  with_audio_llm.yaml
mirror/: __init__.py  cli.py  pipeline.py  types.py
mirror/agents/: agents.py  base.py
mirror/calibration/: thresholds.py
mirror/data/: linking.py  loaders.py  schemas.py
mirror/evaluation/: diagnostics.py
mirror/experiments/: __init__.py  registry.py
mirror/features/: builders.py
mirror/llm/: prompts.py  provider.py
mirror/memory/: store.py
mirror/orchestration/: orchestrator.py
mirror/runtime/: __init__.py  profiling.py  repro.py
mirror/submissions/: writer.py
mirror/utils/: config.py  tracing.py
scripts/: run_ablations.py  run_scenario.sh
tests/: test_pipeline.py  test_smoke.py
tests/fixtures/tiny_scenario/eval/: transactions.csv
tests/fixtures/tiny_scenario/train/: transactions.csv
